Fix header buttons wrapping to new line in firefox.

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -653,17 +653,19 @@ section#content-section {
 }
 
 .content-header {
-    flex: 0 1 36px;
     padding: var(--input-padding) var(--default-full-size);
     position: relative;
 }
 
 .content-header .ui-panel-content {
+    display: flex;
     padding: 0;
 }
 
 .content-header .ui-panel-content > h3 {
     display: inline;
+    flex-grow: 1;
+    flex-shrink: 1;
     line-height: 36px;
 }
 
@@ -671,7 +673,7 @@ section#content-section {
 .content-header .ui-panel-content > button,
 .ui-menubutton,
 .ui-selectbooleanbutton {
-    float: right;
+    white-space: nowrap;
     margin-left: var(--default-full-size);
 }
 
@@ -1104,7 +1106,6 @@ h3#headerText {
     display: inline-block;
     overflow-x: hidden;
     text-overflow: ellipsis;
-    width: calc(100% - 820px);
     white-space: nowrap;
 }
 
